--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -36,7 +36,7 @@ Get **enhanced capabilities**, including **custom theming and branding**, **Serv
 
 :::info
 
-**WebSocket** is required for Open WebUI to function correctly. Ensure that your network configuration allows WebSocket connections.
+**WebSocket** support is required for Open WebUI to function correctly. Ensure that your network configuration allows WebSocket connections.
 
 :::
 
