--- a/docs/getting-started/quick-start/starting-with-ollama.mdx
+++ b/docs/getting-started/quick-start/starting-with-ollama.mdx
@@ -21,7 +21,7 @@ However, if you encounter connection issues, the most common cause is a network 
 
 To manage your Ollama instance in Open WebUI, follow these steps:
 
-1. Go to **Admin Settings** in Open WebUI.
+1. Go to **Admin Settings** in Open WebUI. (do not use the User Setting Menu)
 2. Navigate to **Connections > Ollama > Manage** (click the wrench icon).  
    From here, you can download models, configure settings, and manage your connection to Ollama.
 
