Readded the DATA_DIR portion for the uvx part of the doc.

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -152,7 +152,7 @@ Use the command below, ensuring to set the `DATA_DIR` environment variable to av
 
 - **macOS/Linux**:  
   ```bash
-  , uvx --python 3.11 open-webui@latest serve
+  DATA_DIR=~/.open-webui uvx --python 3.11 open-webui@latest serve
   ```
 
 - **Windows**:  
