--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -28,6 +28,14 @@ In the rapidly advancing AI landscape, staying ahead isn't just a competitive ad
 
 ## **Let’s Talk**  
 
+:::info
+
+We selectively partner with **teams of 100+ seats** to provide the **dedicated attention and expertise you deserve**, ensuring a seamless path to success.  
+
+Have **fewer than 100 seats** but still want **customization and enterprise features?** A **self-serve license** is coming by **end of Q2**—**stay tuned!**  
+
+:::
+
 Transform the way your organization leverages AI. **Contact our enterprise team today** for customized pricing, expert consulting, and tailored deployment strategies.  
 
 📧 **sales@openwebui.com** — Support available in **English & Korean (한국어), with more languages coming soon!**  
