--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -28,17 +28,22 @@ In the rapidly advancing AI landscape, staying ahead isn't just a competitive ad
 
 ## **Let’s Talk**  
 
-:::info
-
-We selectively partner with **teams of 100+ seats** to provide the **dedicated attention and expertise you deserve**, ensuring a seamless path to success.  
-
-Have **fewer than 100 seats** but still want **customization and enterprise features?** A **self-serve license** is coming by **end of Q2**—**stay tuned!**  
-
-:::
+📧 **sales@openwebui.com** — Send us your **team size**, and let’s explore how we can work together! Support available in **English & Korean (한국어), with more languages coming soon!**  
 
 Transform the way your organization leverages AI. **Contact our enterprise team today** for customized pricing, expert consulting, and tailored deployment strategies.  
 
-📧 **sales@openwebui.com** — Support available in **English & Korean (한국어), with more languages coming soon!**  
+
+:::info
+
+We are **currently focused on partnering with teams of 100+ seats** to provide the **dedicated attention, expertise, and tailored solutions** needed for guaranteed success.
+
+If your team is **close to 50 seats** and you're looking for advanced features, **reach out**—we may still be able to help.  
+
+For **smaller teams**, we're launching a **self-serve licensing option** by the **end of Q2**, bringing **customization and select enterprise features** to companies of all sizes. **Stay tuned!**  
+
+:::
+
+
 
 ---
 
