--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -28,12 +28,14 @@ In the rapidly advancing AI landscape, staying ahead isn't just a competitive ad
 
 ## **Let’s Talk**  
 
+
 📧 **sales@openwebui.com** — Send us your **team size**, and let’s explore how we can work together! Support available in **English & Korean (한국어), with more languages coming soon!**  
 
 Transform the way your organization leverages AI. **Contact our enterprise team today** for customized pricing, expert consulting, and tailored deployment strategies.  
 
 
-:::info
+
+:::tip
 
 We are **currently focused on partnering with teams of 100+ seats** to provide the **dedicated attention, expertise, and tailored solutions** needed for guaranteed success.
 
@@ -43,6 +45,19 @@ For **smaller teams**, we're launching a **self-serve licensing option** by the 
 
 :::
 
+
+:::info
+
+## ⚠️ Partnership Guidelines for Agencies
+
+We **carefully select** our partners to maintain the **highest standards** and provide meaningful benefits to our community.  
+
+If you are a **consulting agency**, **AI services provider**, or **reseller**, please **do not** contact our enterprise sales directly. Instead, **fill out our partnership interest form**:  
+
+🔗 **[Apply Here](https://forms.gle/SemdgxjFXpHmdCby6)**  
+
+We evaluate all applications to ensure alignment with our **mission, vision, and values**, selecting only those partners best suited for our ecosystem.  
+:::
 
 
 ---
