--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -50,7 +50,7 @@ For **smaller teams**, we're launching a **self-serve licensing option** by the 
 
 ## ⚠️ Partnership Guidelines for Agencies
 
-We **carefully select** our partners to maintain the **highest standards** and provide meaningful benefits to our community.  
+We **carefully select** our partners to maintain the **highest standards** and provide **the best experience** to our community.  
 
 If you are a **consulting agency**, **AI services provider**, or **reseller**, please **do not** contact our enterprise sales directly. Instead, **fill out our partnership interest form**:  
 
