--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -106,7 +106,7 @@ Valves are configurable by admins alone via the Tools or Functions menus. On the
 from pydantic import BaseModel, Field
 
 # Define and Valves
-class Tool:
+class Tools:
     # Notice the current indentation: Valves and UserValves must be declared as
     # attributes of a Tools, Filter or Pipe class. Here we take the
     # example of a Tool.
