--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -137,7 +137,7 @@ class Tools:
         pass
 
     # The  __user__ handling is the same for Filters, Tools and Functions.
-    def test_the_tool(message: str, __user__: dict):
+    def test_the_tool(self, message: str, __user__: dict):
         """
         This is a test tool. If the user asks you to test the tools, put any
         string you want in the message argument.
