--- a/docs/team.mdx
+++ b/docs/team.mdx
@@ -20,11 +20,16 @@ Our team is led by the dedicated creator and founder, [Tim J. Baek](https://gith
   />
 </a>
 
-### Important Note:
+## 🏛️ Governance
 
-To keep things smooth and organized, please do not contact or `@` mention anyone other than the official maintainer. If you have any questions or need assistance, `@tjbck` is your go-to person. You can also reach out via our official email, hello@openwebui.com. 📨
+Open WebUI is centrally managed and operated by Open WebUI, Inc. Our governance model is straightforward and intentional—we do not operate on [a committee-based governance system or a community-driven voting process](https://www.reddit.com/r/OpenWebUI/comments/1ijkh6m/comment/mbf0yhm/). Strategic and operational decisions are led openly and transparently by our founder, Tim J. Baek, ensuring a clear, unified, long-term vision.
 
-Your understanding and cooperation are appreciated! 💪
+Our project is specifically designed and structured to remain sustainable and independent for **decades** to come—thanks largely to an intentional focus on remaining extremely lean, strategic, and capital-efficient. We aren't pursuing short-term milestones or temporary trends; we're carefully building something lasting and meaningful.
+
+We greatly appreciate enthusiasm and thoughtful suggestions from our community. At the same time, **we're not looking for unsolicited governance recommendations or guidance on how to operate**—we know exactly how we want to run our project (just as, for example, you wouldn't tell OpenAI how to run theirs). Open WebUI maintains strong, opinionated leadership because that's precisely what we believe is necessary to build something truly great, fast-moving, and purposeful.
+
+If our leadership and governance style align with your views, we're thrilled to have your continued support and contributions. However, if you fundamentally disagree with our direction, **one of the key benefits of our open-source license is the freedom to fork the project and implement your preferred approach.**
+
+Thank you for respecting our perspective and for your continued support and contributions. We're excited to keep building with the community around the vision we've established together!
 
 
-Let's keep building something awesome together! 🚀
