--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -28,20 +28,25 @@ In the rapidly advancing AI landscape, staying ahead isn't just a competitive ad
 
 ## **Let’s Talk**  
 
+**Contact our enterprise team today** for customized pricing, expert consulting, and tailored deployment strategies. 
 
 📧 **sales@openwebui.com** — Send us your **team size**, and let’s explore how we can work together! Support available in **English & Korean (한국어), with more languages coming soon!**  
 
-Transform the way your organization leverages AI. **Contact our enterprise team today** for customized pricing, expert consulting, and tailored deployment strategies.  
-
+Take your AI strategy to the next level with our **premium enterprise solutions**, crafted for organizations that demand **expert consulting, tailored deployment, and dedicated support.**  
 
 
 :::tip
 
-We are **currently focused on partnering with teams of 100+ seats** to provide the **dedicated attention, expertise, and tailored solutions** needed for guaranteed success.
+This is not your typical SaaS offering. Our enterprise partnerships are **high-touch, premium engagements** designed for organizations that demand the very best. We bring **direct access to our top engineers—including the founder—ensuring personalized attention, expert consulting, and tailored deployment strategies** that guarantee success.  
 
-If your team is **close to 50 seats** and you're looking for advanced features, **reach out**—we may still be able to help.  
+We **exclusively** work with companies serious about leveraging AI at scale:  
 
-For **smaller teams**, we're launching a **self-serve licensing option** by the **end of Q2**, bringing **customization and select enterprise features** to companies of all sizes. **Stay tuned!**  
+- **100+ seats?** We provide **dedicated, bespoke solutions** for transformational impact.  
+- **Close to 50 seats?** If you need advanced features, **reach out—we may still be able to accommodate you.**  
+
+However, if you’re **budget-conscious or looking for an economical solution**, we strongly recommend using our **open-source version** with **community support**. Our enterprise offering is for **organizations that understand the value of premium AI solutions and are ready to invest accordingly**.  
+
+**For smaller teams:** A **self-serve licensing option** is launching by **end of Q2**, bringing customization and select enterprise features to companies of all sizes. **Stay tuned!**  
 
 :::
 
