Add documentation around RamaLama
I've had a lot of people screaming at me how to do this, just
documenting it.

Signed-off-by: Eric Curtin <ecurtin@redhat.com>

--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -147,6 +147,9 @@ After installing, visit:
 
 You are now ready to start using Open WebUI!
 
+## Using Open WebUI with RamaLama
+If you're using Open WebUI with RamaLama, be sure to check out our [Starting with RamaLama Guide](/getting-started/quick-start/starting-with-ramalama) to learn how to manage your RamaLama instances with Open WebUI.
+
 ## Using Open WebUI with Ollama
 If you're using Open WebUI with Ollama, be sure to check out our [Starting with Ollama Guide](/getting-started/quick-start/starting-with-ollama) to learn how to manage your Ollama instances with Open WebUI.
 
