--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -32,6 +32,8 @@ import { SponsorList } from "@site/src/components/SponsorList";
 Get **enhanced capabilities**, including **custom theming and branding**, **Service Level Agreement (SLA) support**, **Long-Term Support (LTS) versions**, and **more!**
 :::
 
+<TopBanners />
+
 ## Quick Start with Docker 🐳
 
 :::info
