refac: sponsors placement

--- a/docs/pipelines/index.mdx
+++ b/docs/pipelines/index.mdx
@@ -3,6 +3,14 @@ sidebar_position: 1000
 title: "⚡ Pipelines"
 ---
 
+
+import { TopBanners } from "@site/src/components/TopBanners";
+
+
+<TopBanners />
+
+
+
 <p align="center">
   <a href="#">
     <img src="/images/pipelines/header.png" alt="Pipelines Logo" />
