--- a/docs/sponsorships.mdx
+++ b/docs/sponsorships.mdx
@@ -2,8 +2,14 @@
 sidebar_position: 1800
 title: "🌐 Sponsorships"
 ---
+import { TopBanners } from "@site/src/components/TopBanners";
+
+
 
 [![](https://img.shields.io/static/v1?label=Sponsor&message=%E2%9D%A4&logo=GitHub&color=%23fe8e86)](https://github.com/sponsors/tjbck)
+
+
+
 
 ## The Impact of Your Support
 
