--- a/docs/troubleshooting/index.mdx
+++ b/docs/troubleshooting/index.mdx
@@ -2,6 +2,10 @@
 sidebar_position: 600
 title: "🛠️ Troubleshooting"
 ---
+import { TopBanners } from "@site/src/components/TopBanners";
+
+
+<TopBanners />
 
 
 ## 🌟 General Troubleshooting Tips
