--- a/docs/openapi-servers/index.mdx
+++ b/docs/openapi-servers/index.mdx
@@ -54,7 +54,7 @@ Reference implementations provided in this repository demonstrate common use-cas
 
 (More examples and reference implementations will be actively developed and continually updated.)
 
-## 🔌 WIP: Bridge to MCP (Optional)
+## 🔌 Bridge to MCP (Optional)
 
 For your convenience, we also provide a simple, secure MCP-to-OpenAPI proxy server. This enables tool providers who initially implemented MCP servers to expose them effortlessly as standard OpenAPI-compatible APIs, ensuring existing MCP servers and resources remain accessible without additional hassle.
 
@@ -63,7 +63,7 @@ For your convenience, we also provide a simple, secure MCP-to-OpenAPI proxy serv
 ```bash
 cd servers/mcp-proxy
 pip install -r requirements.txt
-python main.py -- uvx mcp-server-time
+python main.py --host 0.0.0.0 --port 8000 -- uvx mcp-server-time --local-timezone=America/New_York
 ```
 
 This can simplify your migration or integration path, avoiding headaches typically associated with MCP's transport and security complexities.
