--- a/docs/openapi-servers/mcp.mdx
+++ b/docs/openapi-servers/mcp.mdx
@@ -16,7 +16,7 @@ Here's how simple it is to launch the MCP-to-OpenAPI proxy server and expose too
 1. **Prerequisites**
 
 - **Python 3.8+** with `pip` installed.
-- (Optional) `uv` installed to run the MCP server.
+- (Optional) `nodejs` with `npm` and/or `uv` installed to run the MCP server.
 
 2. **Clone the Repository & Install Dependencies**
 
