--- a/docs/openapi-servers/index.mdx
+++ b/docs/openapi-servers/index.mdx
@@ -56,17 +56,24 @@ Reference implementations provided in this repository demonstrate common use-cas
 
 ## 🔌 Bridge to MCP (Optional)
 
-For your convenience, we also provide a simple, secure MCP-to-OpenAPI proxy server. This enables tool providers who initially implemented MCP servers to expose them effortlessly as standard OpenAPI-compatible APIs, ensuring existing MCP servers and resources remain accessible without additional hassle.
+For the easiest way to expose your MCP tools as OpenAPI-compatible APIs, we recommend using [mcpo](https://github.com/open-webui/mcpo). This enables tool providers who initially implemented MCP servers to expose them effortlessly as standard OpenAPI-compatible APIs, ensuring existing MCP servers and resources remain accessible without additional hassle.
 
-**Example usage:**
+**Quick Usage:**
+```bash
+uvx mcpo --port 8000 -- uvx mcp-server-time --local-timezone=America/New_York
+```
 
+Alternatively, we also provide a simple Python-based proxy server:
+
+**Example:**
 ```bash
 cd servers/mcp-proxy
 pip install -r requirements.txt
 python main.py --host 0.0.0.0 --port 8000 -- uvx mcp-server-time --local-timezone=America/New_York
 ```
 
-This can simplify your migration or integration path, avoiding headaches typically associated with MCP's transport and security complexities.
+Both methods help bridge existing MCP servers with OpenAPI clients, removing transport and security complexities during integration or migration.
+
 
 
 ## 🌱 Open WebUI Community  
